jilles      2005/12/07 23:30:14 UTC	(20051207-4023)
  Log:
  Remove those stupid should_*() functions, except those
  dealing with owner and protect. They are not used anymore.
  

  Changes:	Modified:
  +0 -8		trunk/include/extern.h (File Modified) 
  +0 -143	trunk/src/function.c (File Modified) 


jilles      2005/12/07 23:22:53 UTC	(20051207-4021)
  Log:
  Fix setting +ohv on xop add. Now works for account
  entries as well as hostmask entries. Does not use
  should_*() anymore.
  
  Setting protect is disabled.
  
  There is a hackish thing to voice HOP list on ircds
  without halfops.
  

  Changes:	Modified:
  +64 -34	trunk/modules/chanserv/xop.c (File Modified) 


jilles      2005/12/07 22:42:40 UTC	(20051207-4019)
  Log:
  Simplify auto{owner,protect,op,halfop,voice} checks on
  identify/login. As before, only check access by account,
  not hostmask. Don't set redundant modes.
  

  Changes:	Modified:
  +8 -6		trunk/modules/nickserv/identify.c (File Modified) 
  +8 -6		trunk/modules/userserv/login.c (File Modified) 


jilles      2005/12/07 15:04:53 UTC	(20051207-4017)
  Log:
  Change wildcard checking to the ratbox (also charybdis) algorithm:
  count the characters other than '*', '?', '.' in both user and host,
  and require at least 4.
  

  Changes:	Modified:
  +11 -6	trunk/modules/operserv/akill.c (File Modified) 


jilles      2005/12/05 17:40:52 UTC	(20051205-4013)
  Log:
  Don't unkline a temp akill if it has already expired.
  

  Changes:	Modified:
  +3 -1		trunk/src/node.c (File Modified) 


jilles      2005/12/05 17:40:21 UTC	(20051205-4011)
  Log:
  Rewrite and simplify cs_join() using chanacs_user_flags().
  

  Changes:	Modified:
  +62 -138	trunk/modules/chanserv/main.c (File Modified) 


jilles      2005/12/05 15:34:12 UTC	(20051205-4009)
  Log:
  Fix garbled expiry time display (0 days, 0:00:4294967261)
  on akills that are expired but not yet removed.
  

  Changes:	Modified:
  +2 -2		trunk/modules/operserv/akill.c (File Modified) 

